--- a/DDAYGO/ViewController/My/Lottery/ZP_CheckMore/ZP_CheckMoreCell/ZP_CheckMoreCell.xib
+++ b/DDAYGO/ViewController/My/Lottery/ZP_CheckMore/ZP_CheckMoreCell/ZP_CheckMoreCell.xib
@@ -1,107 +1,119 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="71" id="KGk-i7-Jjw" customClass="ZP_CheckMoreCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="31"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="69.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="30.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nl8-jO-4Ud">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="23"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="订单号:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LUJ-HR-VvV">
-                                <rect key="frame" x="8" y="3" width="34" height="20"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="20" id="gcQ-tw-F2E"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="34567890987656789" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LEa-YR-QHF">
-                                <rect key="frame" x="47" y="3" width="107.5" height="20"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="20" id="jPi-RI-1Vl"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="POs-xn-v9J">
-                                <rect key="frame" x="267" y="3" width="45" height="20"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="45" id="3Qb-ho-6D7"/>
-                                    <constraint firstAttribute="height" constant="20" id="gR5-mb-rr1"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                <state key="normal" title="领奖">
-                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
-                                        <integer key="value" value="1"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                        <integer key="value" value="5"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="layer.borderColorFromUIColor">
-                                        <color key="value" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lYr-7V-jlO">
+                        <rect key="frame" x="8" y="0.0" width="30" height="30"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="23" id="6Ce-6i-Ugb"/>
-                            <constraint firstItem="LUJ-HR-VvV" firstAttribute="top" secondItem="nl8-jO-4Ud" secondAttribute="top" constant="3" id="DWN-f8-Ywn"/>
-                            <constraint firstAttribute="trailing" secondItem="POs-xn-v9J" secondAttribute="trailing" constant="8" id="Mx1-53-fsY"/>
-                            <constraint firstItem="LEa-YR-QHF" firstAttribute="leading" secondItem="LUJ-HR-VvV" secondAttribute="trailing" constant="5" id="ZrI-i0-nQb"/>
-                            <constraint firstItem="POs-xn-v9J" firstAttribute="top" secondItem="nl8-jO-4Ud" secondAttribute="top" constant="3" id="azb-2v-GRz"/>
-                            <constraint firstItem="LEa-YR-QHF" firstAttribute="top" secondItem="nl8-jO-4Ud" secondAttribute="top" constant="3" id="bse-tv-nIS"/>
-                            <constraint firstItem="LUJ-HR-VvV" firstAttribute="leading" secondItem="nl8-jO-4Ud" secondAttribute="leading" constant="8" id="eRx-jI-D5j"/>
+                            <constraint firstAttribute="height" constant="30" id="tt0-k6-xFr"/>
+                            <constraint firstAttribute="width" constant="30" id="uJ1-lq-iVi"/>
                         </constraints>
-                    </view>
-                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="ymV-G1-ZGe">
-                        <rect key="frame" x="0.0" y="24" width="320" height="46"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                        <state key="normal" title="5" backgroundImage="bg_choose_whiteball_pressed">
+                            <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ecA-DV-9lT">
+                        <rect key="frame" x="46" y="0.0" width="30" height="30"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="46" id="liO-OA-zzJ"/>
+                            <constraint firstAttribute="width" constant="30" id="Gh9-uo-RWu"/>
+                            <constraint firstAttribute="height" constant="30" id="vyZ-bG-cXw"/>
                         </constraints>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="2fO-be-NyL">
-                            <size key="itemSize" width="50" height="50"/>
-                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                        </collectionViewFlowLayout>
-                    </collectionView>
+                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                        <state key="normal" title="5" backgroundImage="bg_choose_whiteball_pressed">
+                            <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Dj-hE-Yjv">
+                        <rect key="frame" x="84" y="0.0" width="30" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="0v2-Kw-LSQ"/>
+                            <constraint firstAttribute="width" constant="30" id="GHi-1x-QQC"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                        <state key="normal" title="5" backgroundImage="bg_choose_whiteball_pressed">
+                            <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lZW-de-3fr">
+                        <rect key="frame" x="122" y="0.0" width="30" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="30" id="Hch-fG-YHx"/>
+                            <constraint firstAttribute="height" constant="30" id="qXb-iS-P9i"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                        <state key="normal" title="5" backgroundImage="bg_choose_whiteball_pressed">
+                            <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cvI-x1-ArW">
+                        <rect key="frame" x="160" y="0.0" width="30" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="30" id="DW3-ID-tgT"/>
+                            <constraint firstAttribute="height" constant="30" id="ORf-bV-A2c"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                        <state key="normal" title="5" backgroundImage="bg_choose_whiteball_pressed">
+                            <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kyV-om-NUk">
+                        <rect key="frame" x="198" y="0.0" width="30" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="30" id="1Rm-NI-J2w"/>
+                            <constraint firstAttribute="height" constant="30" id="dyn-Y8-aHI"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                        <state key="normal" title="5" backgroundImage="bg_choose_redball">
+                            <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                    </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="ymV-G1-ZGe" firstAttribute="top" secondItem="nl8-jO-4Ud" secondAttribute="bottom" constant="1" id="Hb0-v6-Xs8"/>
-                    <constraint firstItem="ymV-G1-ZGe" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="IlB-UX-5fn"/>
-                    <constraint firstItem="nl8-jO-4Ud" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Jcq-3C-ejk"/>
-                    <constraint firstItem="nl8-jO-4Ud" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="P9Q-qY-sgJ"/>
-                    <constraint firstAttribute="trailing" secondItem="ymV-G1-ZGe" secondAttribute="trailing" id="iID-fG-gbn"/>
-                    <constraint firstAttribute="trailing" secondItem="nl8-jO-4Ud" secondAttribute="trailing" id="uAN-0h-bbN"/>
+                    <constraint firstItem="lZW-de-3fr" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="0iP-dD-UTH"/>
+                    <constraint firstItem="kyV-om-NUk" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="6BD-eF-cFI"/>
+                    <constraint firstItem="ecA-DV-9lT" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="CgJ-ye-2Gb"/>
+                    <constraint firstAttribute="trailing" secondItem="kyV-om-NUk" secondAttribute="trailing" constant="92" id="E0S-AL-wSD"/>
+                    <constraint firstItem="cvI-x1-ArW" firstAttribute="leading" secondItem="lZW-de-3fr" secondAttribute="trailing" constant="8" id="H2n-sU-Hx2"/>
+                    <constraint firstItem="cvI-x1-ArW" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="HR5-Z5-0Co"/>
+                    <constraint firstItem="lZW-de-3fr" firstAttribute="leading" secondItem="8Dj-hE-Yjv" secondAttribute="trailing" constant="8" id="JNZ-DW-Ojc"/>
+                    <constraint firstItem="lYr-7V-jlO" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Nnn-3a-rrh"/>
+                    <constraint firstItem="8Dj-hE-Yjv" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Svz-zy-T6N"/>
+                    <constraint firstItem="kyV-om-NUk" firstAttribute="leading" secondItem="cvI-x1-ArW" secondAttribute="trailing" constant="8" id="U7G-1Z-c4m"/>
+                    <constraint firstItem="lYr-7V-jlO" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="Yal-Jk-eA9"/>
+                    <constraint firstItem="ecA-DV-9lT" firstAttribute="leading" secondItem="lYr-7V-jlO" secondAttribute="trailing" constant="8" id="asJ-lH-v4J"/>
+                    <constraint firstItem="8Dj-hE-Yjv" firstAttribute="leading" secondItem="ecA-DV-9lT" secondAttribute="trailing" constant="8" id="opx-VP-ffI"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="CheckMoreCollectionView" destination="ymV-G1-ZGe" id="xFN-Fe-EGW"/>
-                <outlet property="OrderNumberLabel" destination="LEa-YR-QHF" id="04H-ZJ-vvc"/>
-                <outlet property="TitleView" destination="nl8-jO-4Ud" id="Txe-s2-Rw5"/>
+                <outlet property="but1" destination="lYr-7V-jlO" id="YTQ-oS-56U"/>
+                <outlet property="but2" destination="ecA-DV-9lT" id="aWF-ao-56J"/>
+                <outlet property="but3" destination="8Dj-hE-Yjv" id="1tw-Ky-hKp"/>
+                <outlet property="but4" destination="lZW-de-3fr" id="DiF-Lk-7eB"/>
+                <outlet property="but5" destination="cvI-x1-ArW" id="a0M-1T-WAC"/>
+                <outlet property="but6" destination="kyV-om-NUk" id="N6j-nk-35r"/>
             </connections>
             <point key="canvasLocation" x="34" y="67"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="bg_choose_redball" width="32" height="32"/>
+        <image name="bg_choose_whiteball_pressed" width="32" height="32"/>
+    </resources>
 </document>
