--- a/DDAYGO/ViewController/My/Lottery/ZP_HistoryBet/ZP_HistoryHomePage/ZP_HistoryBetCell/ZP_HistoryBetCell.xib
+++ b/DDAYGO/ViewController/My/Lottery/ZP_HistoryBet/ZP_HistoryHomePage/ZP_HistoryBetCell/ZP_HistoryBetCell.xib
@@ -1,60 +1,116 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" restorationIdentifier="ZP_HistoryBetCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="ZP_HistoryBetCell" rowHeight="41" id="KGk-i7-Jjw" customClass="ZP_HistoryBetCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="40"/>
+        <tableViewCell contentMode="scaleToFill" restorationIdentifier="ZP_HistoryBetCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="ZP_HistoryBetCell" rowHeight="31" id="KGk-i7-Jjw" customClass="ZP_HistoryBetCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="31"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="39.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="30.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_forward_right" translatesAutoresizingMaskIntoConstraints="NO" id="icH-5f-n2w">
-                        <rect key="frame" x="296" y="10" width="8" height="15"/>
+                        <rect key="frame" x="296" y="5" width="8" height="15"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="15" id="HjJ-xN-uiE"/>
                             <constraint firstAttribute="width" constant="8" id="nWf-kE-bxp"/>
                         </constraints>
                     </imageView>
-                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="6eF-TL-gAf">
-                        <rect key="frame" x="0.0" y="0.0" width="200" height="40"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zYE-9j-mvV">
+                        <rect key="frame" x="8" y="0.0" width="30" height="30"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="40" id="RDI-Sl-PpZ"/>
+                            <constraint firstAttribute="width" constant="30" id="3Yk-5U-fy3"/>
+                            <constraint firstAttribute="height" constant="30" id="FJJ-bA-3IU"/>
                         </constraints>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="8xd-uB-I7D">
-                            <size key="itemSize" width="50" height="50"/>
-                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                        </collectionViewFlowLayout>
-                    </collectionView>
+                        <state key="normal" title="5" backgroundImage="bg_choose_whiteball_pressed">
+                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                        </state>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HDX-5u-q6z">
+                        <rect key="frame" x="46" y="-1" width="30" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="30" id="C1o-AU-Cjd"/>
+                            <constraint firstAttribute="height" constant="30" id="o7m-Hx-RdU"/>
+                        </constraints>
+                        <state key="normal" title="5" backgroundImage="bg_choose_whiteball_pressed">
+                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                        </state>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yKh-Da-rsf">
+                        <rect key="frame" x="84" y="-1" width="30" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="T20-I8-fGQ"/>
+                            <constraint firstAttribute="width" constant="30" id="WY2-4n-UZr"/>
+                        </constraints>
+                        <state key="normal" title="5" backgroundImage="bg_choose_whiteball_pressed">
+                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                        </state>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JO5-Hf-oYV">
+                        <rect key="frame" x="122" y="0.0" width="30" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="30" id="ELW-q0-4XB"/>
+                            <constraint firstAttribute="height" constant="30" id="eeQ-6n-ufk"/>
+                        </constraints>
+                        <state key="normal" title="5" backgroundImage="bg_choose_whiteball_pressed">
+                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                        </state>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qid-dU-l6H">
+                        <rect key="frame" x="160" y="0.0" width="30" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="BzR-GB-PL1"/>
+                            <constraint firstAttribute="width" constant="30" id="Z9m-3b-dzs"/>
+                        </constraints>
+                        <state key="normal" title="5" backgroundImage="bg_choose_whiteball_pressed">
+                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                        </state>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T8v-6d-6er">
+                        <rect key="frame" x="198" y="0.0" width="30" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="RVl-YB-4WH"/>
+                            <constraint firstAttribute="width" constant="30" id="gzK-D2-AoH"/>
+                        </constraints>
+                        <state key="normal" title="5" backgroundImage="bg_choose_redball">
+                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                        </state>
+                    </button>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="yKh-Da-rsf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="-1" id="5ut-0n-vaS"/>
+                    <constraint firstItem="zYE-9j-mvV" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="C1J-Go-vP9"/>
+                    <constraint firstItem="yKh-Da-rsf" firstAttribute="leading" secondItem="HDX-5u-q6z" secondAttribute="trailing" constant="8" id="Jj2-hs-hNL"/>
+                    <constraint firstItem="HDX-5u-q6z" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="-1" id="Khc-DO-oHu"/>
                     <constraint firstAttribute="trailingMargin" secondItem="icH-5f-n2w" secondAttribute="trailing" id="NFw-jT-5h2"/>
-                    <constraint firstItem="6eF-TL-gAf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Pyh-D9-hep"/>
                     <constraint firstItem="icH-5f-n2w" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" constant="-2.25" id="W3i-M3-UEg"/>
-                    <constraint firstItem="icH-5f-n2w" firstAttribute="leading" secondItem="6eF-TL-gAf" secondAttribute="trailing" constant="96" id="dg8-Pl-W4x"/>
-                    <constraint firstItem="6eF-TL-gAf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="xzT-VJ-D2N"/>
+                    <constraint firstItem="JO5-Hf-oYV" firstAttribute="leading" secondItem="yKh-Da-rsf" secondAttribute="trailing" constant="8" id="YeH-VB-bgD"/>
+                    <constraint firstItem="T8v-6d-6er" firstAttribute="leading" secondItem="Qid-dU-l6H" secondAttribute="trailing" constant="8" id="Z1f-B5-x8h"/>
+                    <constraint firstItem="JO5-Hf-oYV" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="bNY-l0-lBN"/>
+                    <constraint firstItem="zYE-9j-mvV" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="hCt-e9-QKs"/>
+                    <constraint firstItem="HDX-5u-q6z" firstAttribute="leading" secondItem="zYE-9j-mvV" secondAttribute="trailing" constant="8" id="nGQ-kz-Igg"/>
+                    <constraint firstItem="Qid-dU-l6H" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="tKJ-oj-HeM"/>
+                    <constraint firstItem="Qid-dU-l6H" firstAttribute="leading" secondItem="JO5-Hf-oYV" secondAttribute="trailing" constant="8" id="vmg-Qw-CIy"/>
+                    <constraint firstItem="icH-5f-n2w" firstAttribute="leading" secondItem="T8v-6d-6er" secondAttribute="trailing" constant="68" id="wHI-oI-06I"/>
+                    <constraint firstItem="T8v-6d-6er" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="xsS-yb-DPb"/>
                 </constraints>
             </tableViewCellContentView>
-            <connections>
-                <outlet property="collectionView" destination="6eF-TL-gAf" id="9YL-VJ-biq"/>
-            </connections>
-            <point key="canvasLocation" x="34" y="52"/>
+            <point key="canvasLocation" x="34" y="47"/>
         </tableViewCell>
     </objects>
     <resources>
+        <image name="bg_choose_redball" width="32" height="32"/>
+        <image name="bg_choose_whiteball_pressed" width="32" height="32"/>
         <image name="icon_forward_right" width="9" height="16"/>
     </resources>
 </document>
